# fiap_tech_challenge_4

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
data/: stock_market.db
docs/: Arquitetura.md  Gerenciamento de Monorepos com Poetry.md
docs/.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
docs/_old/: Poetry Workspaces e Documentação Oficial.md  workspace.md
docs/architecture/: architecture.md  architecture_sequence_diagram.wsd
logs/: app.jsonl
notebooks/: ColetaDados.ipynb  Forecast_NVDA.ipynb  fetch_stock_market_prices_test.ipynb  lstm_model_pytorch.pth  pydantic_test.ipynb
notebooks/coleta_de_dados/: ColetaDados.ipynb
notebooks/entendendo_pydantic/: Criando Objetos Personalizados.ipynb
notebooks/treinando_modelo/: Forecast_NVDA.ipynb  lstm_model_pytorch.pth  train_lstm_model.ipynb
src/: config.py
src/api/: main_admin.py  main_public.py
src/api/v1/dependencies/: auth.py
src/api/v1/routers/: model_lstm.py  stock_market.py
src/api/v1/schemas/: stock_market_prices.py
src/app/: main.py
src/app/core/: database.py
src/app/features/auth/: crud.py  orm_models.py
src/app/features/stock_prediction/: __init__.py  router.py
src/common/: config.py  logger.py  project_tree.py
src/data_pipeline/: __init__.py  orm_model.py
src/data_pipeline/crud/: stock_market_prices.py
src/data_pipeline/database/: connection.py  init_db.py
src/data_pipeline/orm_models/: stock_market.py
src/data_pipeline/sources/: yfinance_collector.py
src/db/: database.py
src/ftc4/: run.py
src/ftc4/api/: admin.py  public.py
src/ftc4/api/v1/routers/: model_lstm.py  stock_market.py
src/ftc4/api/v1/schemas/: stock_market_prices.py
src/ftc4/common/: config.py  logger.py  project_tree.py
src/ftc4/data_pipeline/: __init__.py
src/ftc4/data_pipeline/crud/: stock_market_prices.py
src/ftc4/data_pipeline/database/: connection.py  init_db.py
src/ftc4/data_pipeline/orm_models/: stock_market.py
src/ftc4/data_pipeline/sources/: yfinance_source.py
src/ftc4/ml_models/lstm_model/: __init__.py  model.py  predict.py  preprocess.py  train.py
src/ml_models/lstm_model/: model.py  predict.py  preprocess.py  train.py
src/ml_models/lstm_model/artifacts/: lstm.pt  preprocessor.joblib
src/utils/: project_tree.py
tests/: test_api.py  test_db.py  test_model.py
