[project]
name = "fiap-tech-challenge-4"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Juan Carvalho Silva",email = "antonioxp.8@hotmail.com"}
]
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "yfinance (>=0.2.61,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

